namespace decorator.src.Interfaces;

public interface IGreetingService
{
    void GreetUser(int userId);
}
